# uberjay-aoc

./: Cargo.toml  README.md
criterion-example/Day1 - Part2/(default)/change/: estimates.json
criterion-example/Day1 - Part2/(default)/new/: benchmark.json  estimates.json  raw.csv  sample.json  tukey.json
criterion-example/Day1 - Part2/(default)/report/: index.html
criterion-example/Day1 - Part2/fxhash/base/: estimates.json  raw.csv  sample.json
criterion-example/Day1 - Part2/fxhash/change/: estimates.json
criterion-example/Day1 - Part2/fxhash/new/: benchmark.json  tukey.json
criterion-example/Day1 - Part2/fxhash/report/: index.html
criterion-example/Day1 - Part2/report/: index.html
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs
