[package]
name = "uberjay-aoc"
version = "0.1.0"
authors = ["Joshua Huber <huber@paradoxical.net>"]
edition = "2018"

[dependencies]
aoc-runner = "0.2.0"
aoc-runner-derive = "0.2.0"
fxhash = "0.2.1"
itertools = "0.7.11"
strsim = "0.8.0"
failure = "0.1.3"
hashbrown = "0.1.7"
chrono = "0.4.6"
regex = "1.1.0"
rayon = "1.0.3"
